# WordCounter

./: CMakeLists.txt  README.md  application.qrc  parse_data.qrc
application/: file.rc
qml/: Main.qml
src/: main.cpp
src/controllers/: controller.cpp  controller.h
src/models/: wordfrequencymodel.cpp  wordfrequencymodel.h
src/workers/: wordcountworker.cpp  wordcountworker.h
